Interchange marking notification function to user-navbar component, along with emitting latestNotifications to child component

--- a/ClientDashboard_GUI/src/app/user-navbar/user-navbar.html
+++ b/ClientDashboard_GUI/src/app/user-navbar/user-navbar.html
@@ -1,7 +1,7 @@
 @if(accountService.currentUser()){
     
     <p-drawer header="Latest Notifications" [(visible)]="notificationVisibility" position="right">
-        <app-notification-toggle></app-notification-toggle>
+        <app-notification-toggle [latestNotifications]="latestNotifications"></app-notification-toggle>
     </p-drawer>
 
     <p-menubar [model]="functionItems">
