--- a/ClientDashboard_GUI/src/app/home/home.html
+++ b/ClientDashboard_GUI/src/app/home/home.html
@@ -41,13 +41,34 @@
 
     <p-card class="stat-card">
       <div class="stat-content">
-        <i class="pi pi-check-circle stat-icon"></i>
+        <i class="pi pi-cloud-download stat-icon"></i>
         <div class="stat-details">
-          <span class="stat-feature">Session Progress</span>
-          <span class="stat-description">Track client sessions</span>
+          <span class="stat-feature">Auto Workout Collection</span>
+          <span class="stat-description">Integrate workout logger for automatic syncing</span>
         </div>
       </div>
     </p-card>
+
+    <p-card class="stat-card">
+      <div class="stat-content">
+        <i class="pi pi-bell stat-icon"></i>
+        <div class="stat-details">
+          <span class="stat-feature">In-App Notifications</span>
+          <span class="stat-description">Alerts for sessions, step tracking & more</span>
+        </div>
+      </div>
+    </p-card>
+
+    <p-card class="stat-card">
+      <div class="stat-content">
+        <i class="pi pi-send stat-icon"></i>
+        <div class="stat-details">
+          <span class="stat-feature">SMS Reminders</span>
+          <span class="stat-description">Automated client & trainer text alerts and reminders</span>
+        </div>
+      </div>
+    </p-card>
+
   </div>
 
   <!-- Analytics Charts Section -->
