--- a/ClientDashboard_GUI/src/app/home/home.css
+++ b/ClientDashboard_GUI/src/app/home/home.css
@@ -191,6 +191,7 @@
 .side-by-side-features {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(600px, 1fr));
+  margin-top: 2rem;
   gap: 2rem;
 }
 
