Comment out functionality that has not been fully implemented

--- a/ClientDashboard_GUI/src/app/client-info/client-info.component.html
+++ b/ClientDashboard_GUI/src/app/client-info/client-info.component.html
@@ -137,14 +137,14 @@
                       icon="pi pi-whatsapp"
                       rounded
                     ></button></a>
-                    <button
+                    <!-- <button
                       *ngIf="!editing"
                       pButton
                       pRipple
                       severity="secondary"
                       icon="pi pi-chart-line"
                       rounded
-                    ></button>
+                    ></button> -->
                     <p-button 
                         *ngIf="editing"
                         (onClick)="showPhoneDialog(client)"
