--- a/ClientDashboard_GUI/src/app/client-info/client-info.component.html
+++ b/ClientDashboard_GUI/src/app/client-info/client-info.component.html
@@ -51,10 +51,11 @@
 </p-dialog>
 
   <div class="table-container">
-  <p-table [value]="clients" dataKey="id" editMode="row" [tableStyle]="{ 'min-width': '50rem' }">
+  <p-table #dt1 [value]="clients" dataKey="id" editMode="row" [tableStyle]="{ 'min-width': '50rem' }">
       <ng-template #header>
-        <div class="flex justify-end gap-2">
+        <div class="header-buttons">
           <p-button icon="pi pi-plus" styleClass="add-button" label="New" severity="secondary" (onClick)="showDialogForAdd()"></p-button>
+          <p-button label="Clear" styleClass="clear-button" [outlined]="true" icon="pi pi-filter-slash" (click)="clear(dt1)" />
         </div>
           <tr>
               <th pSortableColumn="firstName" style="width:25%; text-align: center;">
