--- a/ClientDashboard_GUI/src/app/client-info/client-info.component.css
+++ b/ClientDashboard_GUI/src/app/client-info/client-info.component.css
@@ -6,8 +6,18 @@
 
 .header-buttons {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
+  width: 100%;
+}
+
+.left-segment {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.right-segment {
+  display: flex;
 }
 
 .delete-message {
