--- a/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.css
+++ b/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.css
@@ -15,6 +15,9 @@
 
 .workout-search {
     margin-right: 80px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
 
 .workout-search-input {
@@ -23,6 +26,10 @@
 
 .workout-add-button {
     margin-right: 40px;
+}
+
+.clear-button {
+    margin-right: 20px;
 }
 
 .left-segment {
