--- a/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
+++ b/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
@@ -163,7 +163,6 @@
             </div>
 
             <div class="right-segment">
-                
                 <div class="workout-search">
                     <p-iconfield iconPosition="left" class="ml-auto">
                         <p-inputicon>
@@ -171,8 +170,8 @@
                         </p-inputicon>
                         <input class="workout-search-input" pInputText type="text" (input)="dt2.filterGlobal($any($event.target).value, 'contains')" placeholder="Search client name" />
                     </p-iconfield>
+                    <p-button label="Clear" styleClass="clear-button" [outlined]="true" icon="pi pi-filter-slash" (click)="clear(dt2)" />
                 </div>
-
                 <p-button icon="pi pi-times-circle" (click)="showDialogForNameExclusions()" severity="secondary" label="Exclude" />
             </div>
             
