Set up Popover for current session column within client-info component

--- a/ClientDashboard_GUI/src/app/client-info/client-info.component.html
+++ b/ClientDashboard_GUI/src/app/client-info/client-info.component.html
@@ -5,6 +5,12 @@
 
 <p-toast />
 
+  <p-popover #currentSessionPopover>
+    <div class="currentSessionPopover">
+        <p>States which session number the client finished</p>
+    </div>
+  </p-popover>
+
   <!-- Add Dialog - Moved outside table -->
   <p-dialog header="Add new Client" [modal]="true" [(visible)]="addDialogVisible" [style]="{ width: '25rem' }">
       <span class="p-text-secondary block mb-8">Enter new client details:</span>
@@ -65,8 +71,10 @@
               <th pSortableColumn="firstName" style="width:25%; text-align: center;">
                     Client Name <p-sortIcon field="firstName" />
               </th>
-              <th pSortableColumn="currentBlockSession" style="width:25%; text-align: center;">
-                    Current Session <p-sortIcon field="currentBlockSession" />
+              <th pSortableColumn="currentBlockSession" style="width:25%; text-align: center;"
+               (mouseenter)="showPopover($event, currentSessionPopover)"
+               (mouseleave)="hidePopover(currentSessionPopover)">
+                    Current Session <p-sortIcon field="currentBlockSession"/>
               </th>
               <th pSortableColumn="totalBlockSessions" style="width:25%; text-align: center;">
                     Block Sessions <p-sortIcon field="totalBlockSessions" />
