--- a/ClientDashboard_GUI/src/app/client-info/client-info.component.html
+++ b/ClientDashboard_GUI/src/app/client-info/client-info.component.html
@@ -5,9 +5,9 @@
 
 <p-toast />
 
-  <p-popover #currentSessionPopover>
-    <div class="currentSessionPopover">
-        <p>States which session number the client finished</p>
+  <p-popover #currentSessionPopover appendTo="body">
+    <div style="padding: 0.25rem 0.5rem; font-size: 0.75rem; max-width: 180px;">
+        <p style="margin: 0; font-size: 0.85rem;">States which session the client finished</p>
     </div>
   </p-popover>
 
